--- a/.gitignore
+++ b/.gitignore
@@ -118,10 +118,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
-.venv
-/stripe_backend/env/
-/stripe_backend/venv/
 ENV/
 env.bak/
 venv.bak/
@@ -160,13 +156,13 @@ cython_debug/
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/stripe_frontend/node_modules
 /.pnp
 .pnp.js
-stripe_frontend/node_modules/
-stripe_backend/venv
 stripe_backend/db
 
+*.env
+*venv
+*node_modules
 
 # testing
 /coverage
