--- a/stripe_backend/requirements.txt
+++ b/stripe_backend/requirements.txt
@@ -5,9 +5,10 @@ Django==3.2.9
 django-cors-headers==4.3.1
 djangorestframework==3.12.4
 idna==3.3
+python-dotenv==1.0.1
 pytz==2021.3
 requests==2.26.0
 sqlparse==0.4.2
-stripe
+stripe==9.6.0
 typing_extensions==4.11.0
 urllib3==1.26.7
